@@ -4,6 +4,8 @@ CHANGES-1.4.txt
 CHANGES IN CUPS V1.4.1
 
 	- Documention fixes (STR #3296)
+	- SNMP supply levels and states were wrong for some printers.
+	- The IPP backend did not update the auth-info-required value.
 	- The libusb-based USB backend would hang at the end of the job
 	  (STR #3315)
 	- DNS-SD registrations for raw queues had an empty "ty" key (STR #3299)
